# maintenance-state-store

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  README.md  package.xml  pyproject.toml  sonar-project.properties
.github/workflows/: release.yml  test.yml
cmake/: maintenance_state_store-config.cmake.in
include/maintenance_state_store/: maintenance_state_store.hpp
python/maintenance_state_store/: __init__.py  _store.py
src/: maintenance_state_store.cpp
tests/: CMakeLists.txt  mss_cli.cpp  test_store.cpp  test_store.py
tests/fixtures/: state_off_v1.json  state_on_v1.json
